[tool.poetry]
name = "batch-debugging-cli"
version = "0.0.4"
description = "A CLI that makes it easier to debug issues with batch compute enviornments in AWS, future plans to support GCP, Azure and kubernetes"
authors = ["shahbaz mahmood <shahbaz.mahmooood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.2"
attrs = "^23.1.0"
boto3 = "^1.29.7"
typer = {extras = ["all"], version = "^0.9.0"}
batch-debugging = "0.0.6"

[tool.poetry.scripts]
batch-debugging = "batch_debugging_cli.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
